--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Home</h1>
-<h2>Revision One</h2>
-<p>Heavy boxes perform quick waltzes and jigs</p>
+<h2>Revision One duplicate</h2>
+<p>The five boxing wizards jump quickly</p>
 </body>
 </html>
