Duplicate-1 with some changes applied

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 <h1>Home</h1>
-<h2>Revision One</h2>
+<h2>Changes made</h2>
+<ul>
+<li>Added Some Font-styles to paragragh tag</li>
+<li>Added some background styles</li>
+</ul>
 <p>Heavy boxes perform quick waltzes and jigs</p>
 </body>
 </html>
