Duplicate-2 of original

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <ul>
 <li>Added Some Font-styles to paragragh tag</li>
 <li>Added some background styles</li>
+<li>Added color to headings</li>
 </ul>
 <p>Heavy boxes perform quick waltzes and jigs</p>
 </body>
